--- a/blog-preview-card-main/index.html
+++ b/blog-preview-card-main/index.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Figtree:wght@600;800&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   <link rel="stylesheet" href="styles.css">
   <title>Frontend Mentor | Blog preview card</title>
@@ -17,28 +19,31 @@
   -->
 </head>
 <body>
-  <div class="card-container">
+  <div class="content">
+    <div class="card-container">
+        <div class="card-content">
+          <img id="article-pic" src="./assets/images/illustration-article.svg" alt="article illustration">
 
-    <img id="article-pic" src="./assets/images/illustration-article.svg" alt="article illustration">
+          <h2 class="topic">Learning</h2>
 
-    <h2 class="topic">Learning</h2>
+          <p class="publishing-date">Published 21 Dec 2023</p>
 
-    <p class="publishing-date">Published 21 Dec 2023</p>
+          <h1 class="title">HTML & CSS foundations</h1>
 
-    <h1 class="title">HTML & CSS foundations</h1>
+          <p class="description">These languages are the backbone of every website, defining structure, content, and presentation.</p>
 
-    <p class="description">These languages are the backbone of every website, defining structure, content, and presentation.</p>
+          <div class="author-container">
+            <img id="author-pic" src="./assets/images/image-avatar.webp" alt="author profile picture">
+            <h2 class="author">Greg Hooper</h2>
+          </div>
 
-    <div class="author-container">
-      <img id="author-pic" src="./assets/images/image-avatar.webp" alt="author profile picture">
-      <h2 class="author">Greg Hooper</h2>
+      </div>
     </div>
-
   </div>
-
+<!--
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="https://github.com/PersephoneXO/fm-blog-preview-card">PersephoneXO</a>.
-  </div>
+  </div>-->
 </body>
 </html>
