--- a/blog-preview-card-main/index.html
+++ b/blog-preview-card-main/index.html
@@ -40,10 +40,10 @@
       </div>
     </div>
   </div>
-<!--
+
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="https://github.com/PersephoneXO/fm-blog-preview-card">PersephoneXO</a>.
-  </div>-->
+  </div>
 </body>
 </html>
