fixed file location issue

--- a/index.html
+++ b/index.html
@@ -10,19 +10,12 @@
   <link rel="stylesheet" href="styles.css">
   <title>Frontend Mentor | Blog preview card</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <!--
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-  -->
 </head>
 <body>
   <div class="content">
     <div class="card-container">
         <div class="card-content">
-          <img id="article-pic" src="./assets/images/illustration-article.svg" alt="article illustration">
+          <img id="article-pic" src="blog-preview-card-main/assets/images/illustration-article.svg" alt="article illustration">
 
           <h2 class="topic">Learning</h2>
 
@@ -33,7 +26,7 @@
           <p class="description">These languages are the backbone of every website, defining structure, content, and presentation.</p>
 
           <div class="author-container">
-            <img id="author-pic" src="./assets/images/image-avatar.webp" alt="author profile picture">
+            <img id="author-pic" src="blog-preview-card-main/assets/images/image-avatar.webp" alt="author profile picture">
             <h2 class="author">Greg Hooper</h2>
           </div>
 
